[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskqueue"
version = "1.0.0"
description = "Structured concurrency and parallelism for asyncio, threading, and multiprocessing using queues."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Ichinga Samuel", email = "ichingasamuel@gmail.com"}]
keywords = [
    "asyncio",
    "concurrency",
    "multiprocessing",
    "parallelism",
    "priority-queue",
    "queue",
    "structured-concurrency",
    "task-queue",
    "threading",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
uvloop = ["uvloop>=0.19"]
dev = [
    "build>=1.2.2",
    "coverage[toml]>=7.10.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
]

[project.urls]
Homepage = "https://github.com/Ichinga-Samuel/taskqueue"
Repository = "https://github.com/Ichinga-Samuel/taskqueue"
Issues = "https://github.com/Ichinga-Samuel/taskqueue/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["taskqueue*"]

[tool.setuptools.package-data]
taskqueue = ["py.typed"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["taskqueue"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
